// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownLink languages dropdown list; item.text === Languages 1`] = `
<div
  class="dropdown-wrapper"
>
  <button
    aria-label="Select languages"
    class="dropdown-title"
    type="button"
  >
    <span
      class="title"
    >
      Languages
    </span>
     
    <span
      class="arrow right"
    />
  </button>
   
  <dropdowntransition-stub>
    <ul
      class="nav-dropdown border-box-shadow"
      style="display: none;"
    >
      <li
        class="dropdown-item"
      >
        <!---->
         
        <navlink-stub
          closemenu="function () { [native code] }"
          item="[object Object]"
        />
      </li>
      <li
        class="dropdown-item"
      >
        <!---->
         
        <navlink-stub
          closemenu="function () { [native code] }"
          item="[object Object]"
        />
      </li>
      <li
        class="dropdown-item"
      >
        <!---->
         
        <navlink-stub
          closemenu="function () { [native code] }"
          item="[object Object]"
        />
      </li>
       
      <li
        class="languages-dropdown-item"
      >
        <router-link-stub
          class="languages-link nav-link"
          to="/languages/"
        >
          View all
        </router-link-stub>
      </li>
    </ul>
  </dropdowntransition-stub>
</div>
`;

exports[`DropdownLink non-languages dropdown list; some items' type are links 1`] = `
<div
  class="dropdown-wrapper"
>
  <button
    aria-label="Select choices"
    class="dropdown-title"
    type="button"
  >
    <span
      class="title"
    >
      Choices
    </span>
     
    <span
      class="arrow right"
    />
  </button>
   
  <dropdowntransition-stub>
    <ul
      class="nav-dropdown border-box-shadow"
      style="display: none;"
    >
      <li
        class="dropdown-item"
      >
        <h4>
          currency
        </h4>
         
        <ul
          class="dropdown-subitem-wrapper"
        >
          <li
            class="dropdown-subitem"
          >
            <navlink-stub
              closemenu="function () { [native code] }"
              item="[object Object]"
            />
          </li>
          <li
            class="dropdown-subitem"
          >
            <navlink-stub
              closemenu="function () { [native code] }"
              item="[object Object]"
            />
          </li>
        </ul>
      </li>
      <li
        class="dropdown-item"
      >
        <!---->
         
        <navlink-stub
          closemenu="function () { [native code] }"
          item="[object Object]"
        />
      </li>
      <li
        class="dropdown-item"
      >
        <h4>
          color
        </h4>
         
        <ul
          class="dropdown-subitem-wrapper"
        >
          <li
            class="dropdown-subitem"
          >
            <navlink-stub
              closemenu="function () { [native code] }"
              item="[object Object]"
            />
          </li>
          <li
            class="dropdown-subitem"
          >
            <navlink-stub
              closemenu="function () { [native code] }"
              item="[object Object]"
            />
          </li>
          <li
            class="dropdown-subitem"
          >
            <navlink-stub
              closemenu="function () { [native code] }"
              item="[object Object]"
            />
          </li>
        </ul>
      </li>
       
      <!---->
    </ul>
  </dropdowntransition-stub>
</div>
`;

exports[`DropdownLink toggle dropdownlist to be open 1`] = `
<div
  class="dropdown-wrapper open"
>
  <button
    aria-label="Select languages"
    class="dropdown-title"
    type="button"
  >
    <span
      class="title"
    >
      Languages
    </span>
     
    <span
      class="arrow down"
    />
  </button>
   
  <dropdowntransition-stub>
    <ul
      class="nav-dropdown border-box-shadow"
      style=""
    >
      <li
        class="dropdown-item"
      >
        <!---->
         
        <navlink-stub
          closemenu="function () { [native code] }"
          item="[object Object]"
        />
      </li>
      <li
        class="dropdown-item"
      >
        <!---->
         
        <navlink-stub
          closemenu="function () { [native code] }"
          item="[object Object]"
        />
      </li>
      <li
        class="dropdown-item"
      >
        <!---->
         
        <navlink-stub
          closemenu="function () { [native code] }"
          item="[object Object]"
        />
      </li>
       
      <li
        class="languages-dropdown-item"
      >
        <router-link-stub
          class="languages-link nav-link"
          to="/languages/"
        >
          View all
        </router-link-stub>
      </li>
    </ul>
  </dropdowntransition-stub>
</div>
`;
